env get gitIgnore

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,7 @@ dist
 dist-ssr
 *.local
 
+.env
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -43,3 +44,4 @@ dist-ssr
 
   printf "%s" "$path"
 }
+.env
