--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "nvm": "^0.0.4",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-icons": "^5.5.0",
     "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.5",
     "socket.io-client": "^4.8.1",
     "tailwindcss": "^4.1.11",
     "three": "^0.178.0"
