--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.11",
     "@types/three": "^0.178.1",
+    "hamburger-react": "^2.5.2",
     "jsonrpc-lite": "^2.2.0",
     "nvm": "^0.0.4",
     "react": "^19.1.0",
